# twitch_obs_02

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Summary.md  repo_overview.md
.docs/: 00-index.md  01-product-scope.md  02-architecture-overview.md  03-domain-model.md  04-api-contracts.md  05-data-schema-and-migrations.md  06-frontend-spec.md  07-debug-telemetry.md  08-implementation-plan.md  09-testing-strategy.md  10-operations-runbook.md  11-security-and-privacy.md  12-ci-cd.md  99-glossary.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: backfill.rs  command.rs  main.rs  maintenance.rs  oauth.rs  problem.rs  router.rs  sse.rs  state.rs  tap.rs  telemetry.rs  webhook.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  normalizer.rs  policy.rs  projector.rs  types.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/twitch/: Cargo.toml
crates/twitch/src/: helix.rs  lib.rs  oauth.rs
crates/util/: Cargo.toml
crates/util/src/: config.rs  lib.rs
memo/: 01_introduction.md  02_project_structure.md  03_data_flow.md  04_core_components.md  05_configuration_and_usage.md  06_extensions_and_customization.md  07_troubleshooting_and_faq.md  08_appendix.md
migrations/: 0001_init.sql  0002_ingress_and_log.sql  0003_queue_and_counters.sql  0004_oauth_backfill_scaffolding.sql
scripts/: dev.ps1  dev.sh  make_token.py
web/admin/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/admin/src/: api.ts  config.test.ts  config.ts  main.css  main.ts  settings.test.ts  settings.ts
web/overlay/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
web/overlay/src/: App.css  App.tsx  api.test.ts  api.ts  index.css  state.test.ts  state.ts  types.ts
web/shared/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json
web/shared/src/: index.ts  state.test.ts  state.ts  types.ts
