[workspace]
members = [
    "crates/app",
    "crates/core",
    "crates/storage",
    "crates/twitch",
    "crates/util",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tower = { version = "0.4.13", features = ["util"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "time", "json"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.13"
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
http-body-util = "0.1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
thiserror = "1"
tempfile = "3"
hex = "0.4"
jsonwebtoken = "9"
