[package]
name = "twi-overlay-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
twi-overlay-util = { path = "../util" }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
