[package]
name = "twi-overlay-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
twi-overlay-util = { path = "../util" }
twi-overlay-storage = { path = "../storage" }
twi-overlay-core = { path = "../core" }
twi-overlay-twitch = { path = "../twitch" }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
rand = "0.8"
ulid = "1"
base64 = { version = "0.21", default-features = false, features = ["alloc"] }

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
tempfile = { workspace = true }
serde_urlencoded = "0.7"
httpmock = "0.7"
