[package]
name = "twi-overlay-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
twi-overlay-core = { path = "../core" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
