[package]
name = "twi-overlay-twitch"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = "2"

[dev-dependencies]
httpmock = "0.7"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
